--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-/* style.css  */git 
-
-.body {
+/* style.css  */
+git g .body {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,6 +102,8 @@ button {
 #history {
   margin-top: 230px;
   padding: 10px;
+  flex-direction: column;
+  align-items: center;
   background-color: #404258;
   color: #fff;
   border-radius: 10px;
@@ -110,8 +111,18 @@ button {
   overflow-y: auto;
 }
 
+.h3-history {
+  margin-top: -10px;
+  font-size: 18px;
+  text-align: center;
+}
+
 #history-log {
   padding: 10px;
+  overflow-y: auto;
+  max-height: 100px;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 button:hover {
